HtmlApp/sampleapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: nginx # stefanwalther/docker-test # nginx
        ports:
        - containerPort: 80 # 3000 # 80
