HtmlApp/sampleapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app    
spec:
  selector:
    app: sample-app
  ports:
  - port: 3000 #80
    targetPort: 3000 #80
    nodePort: 30315
  type: NodePort
