HtmlApp/sampleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: htmlapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer" # "letsencrypt-http"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/private-key-algorithm: rsa
    cert-manager.io/private-key-size: "2048"
    cert-manager.io/alt-names: test.ellkaydemo.com
    cert-manager.io/common-name: test.ellkaydemo.com
    cert-manager.io/additional-output-formats: "CombinedPEM"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test.ellkaydemo.com
    secretName: htmlapp-tls # sampleapp-tls
  rules:
  - host: test.ellkaydemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app
            port:
              number: 3000
